End User API implementation
